frontend/src/components/WorksheetSettingsDropdown.module.css
.collapse_container {
  max-height: 92px !important;
  width: 200px;
  position: absolute;
  right: 10px;
  top: 40px;
  background-color: white;
  z-index: calc(420 + 69);
  box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.2);
  border-radius: 10px;
}

.settings {
  transition: 0.3s;
}

.settings:hover {
  cursor: pointer;
}

.settings_rotated {
  transition: 0.3s;
  transform: rotate(90deg);
}

:global .css-yk16xz-control {
  border-top: none !important;
  border-left: none !important;
  border-right: none !important;
  border-radius: 0px !important;
  width: 175px !important;
  cursor: pointer !important;
}

:global .css-1pahdxg-control {
  cursor: pointer !important;
  width: 175px !important;
  border-top: none !important;
  border-left: none !important;
  border-right: none !important;
  border-radius: 0px !important;
  border-color: hsl(0, 0%, 80%) !important;
  box-shadow: none !important;
  outline: none !important;
}

:global .css-1okebmr-indicatorSeparator {
  display: none !important;
}

:global .css-1uccc91-singleValue {
  font-size: 15px;
  font-weight: 500;
}

